--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,9 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+tokio = { version = "1", features = ["full"] }
+kube = { version = "3.0.1", features = ["runtime", "derive"] }
+k8s-openapi = { version = "0.27.0", features = ["latest", "schemars"] }
+serde_json = "1.0.117"
+serde = "1.0.203"
+futures = "0.3.31"
