--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ k8s-openapi = { version = "0.27.0", features = ["latest", "schemars"] }
 serde_json = "1.0.117"
 serde = "1.0.203"
 futures = "0.3.31"
+env_logger = "0.11.8"
+log = "0.4.29"
