--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,4 @@ serde = { version = "1.0.203", features = ["derive"] }
 futures = "0.3.31"
 env_logger = "0.11.8"
 log = "0.4.29"
-reqwest = { version = "0.12", features = ["json"] }
+reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
