--- a/helm/templates/rbac.yaml
+++ b/helm/templates/rbac.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: bellboy
-  namespace: default
+  name: {{ .Values.serviceAccount.name }}
+  namespace: {{ .Values.namespace }}
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: bellboy
+  name: {{ .Values.serviceAccount.name }}
 rules:
 - apiGroups: ["apps"]
   resources: ["deployments"]
@@ -16,12 +16,12 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: bellboy
+  name: {{ .Values.serviceAccount.name }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: bellboy
+  name: {{ .Values.serviceAccount.name }}
 subjects:
 - kind: ServiceAccount
-  name: bellboy
-  namespace: default
+  name: {{ .Values.serviceAccount.name }}
+  namespace: {{ .Values.namespace }}
