helm 패키지 버전 추가, 사용법 README에 문서화

--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -35,6 +35,10 @@ spec:
                   key: slack-channel
             - name: LANGUAGE
               value: {{ .Values.language | quote }}
+            {{- if .Values.watchNamespace }}
+            - name: NAMESPACE
+              value: {{ .Values.watchNamespace | quote }}
+            {{- end }}
             - name: RUST_LOG
               value: {{ .Values.logLevel | quote }}
           resources:
